# django_rest_framework_test_with_pytest

./: .gitignore  README.md
Part-1 Pytest va Fixturelar haqida tushuncha/api/v1/books/: serializers.py
Part-2 Serializerlarni pytest orqali testdan o'tkazish/api/v1/: urls.py
Part-2 Serializerlarni pytest orqali testdan o'tkazish/api/v1/books/: services.py  urls.py
Part-2 Serializerlarni pytest orqali testdan otkazish/common/: admin.py
Part-2 Serializerlarni pytest orqali testdan otkazish/common/migrations/: 0002_alter_category_is_active.py
Part-3 "Бизнес логика" larni pytest orqali testdan o'tkazish/books/migrations/: 0002_remove_book_image_alter_book_is_active.py
Part-3 "Бизнес логика" larni pytest orqali testdan otkazish/books/: models.py
Part-3 "Бизнес логика" larni pytest orqali testdan otkazish/books/migrations/: 0001_initial.py
Part-3 "Бизнес логика" larni pytest orqali testdan otkazish/common/: models.py
Part-4 Viewslarni pytest orqali testdan o'tkazish/: pytest.ini
Part-4 Viewslarni pytest orqali testdan o'tkazish/books/: admin.py
Part-4 Viewslarni pytest orqali testdan o'tkazish/conf/: settings.py
Part-4 Viewslarni pytest orqali testdan otkazish/: pyproject.toml
Part-4 Viewslarni pytest orqali testdan otkazish/api/v1/books/: permissions.py  views.py
Part-4 Viewslarni pytest orqali testdan otkazish/api/v1/books/tests/: conftest.py  test_example.py  test_views.py
Part-4 Viewslarni pytest orqali testdan otkazish/common/migrations/: 0001_initial.py
Part-4 Viewslarni pytest orqali testdan otkazish/conf/: urls.py
(+11 files in other folders)
